@@ -370,15 +370,27 @@ static int copy_contents(FILE *src, FILE *dest)
 	return 0;
 }
 
-static int create_backup(const char *backup_file, FILE *fptr)
+static int create_backup(char *backup_file, FILE *fptr)
 {
 	FILE *fbackup;
 
+#ifdef WIN32
 	fbackup = mosquitto__fopen(backup_file, "wt", true);
+#else
+	int fd;
+	umask(077);
+	fd = mkstemp(backup_file);
+	if(fd < 0){
+		fprintf(stderr, "Error creating backup password file \"%s\", not continuing.\n", backup_file);
+		return 1;
+	}
+	fbackup = fdopen(fd, "wt");
+#endif
 	if(!fbackup){
 		fprintf(stderr, "Error creating backup password file \"%s\", not continuing.\n", backup_file);
 		return 1;
 	}
+
 	if(copy_contents(fptr, fbackup)){
 		fprintf(stderr, "Error copying data to backup password file \"%s\", not continuing.\n", backup_file);
 		fclose(fbackup);
@@ -617,13 +629,13 @@ int main(int argc, char *argv[])
 			return 1;
 		}
 
-		backup_file = malloc((size_t)strlen(password_file)+5);
+		backup_file = malloc((size_t)strlen(password_file)+strlen(".backup.XXXXXX"));
 		if(!backup_file){
 			fprintf(stderr, "Error: Out of memory.\n");
 			free(password_file);
 			return 1;
 		}
-		snprintf(backup_file, strlen(password_file)+5, "%s.tmp", password_file);
+		snprintf(backup_file, strlen(password_file)+5, "%s.backup.XXXXXX", password_file);
 		free(password_file);
 		password_file = NULL;
 
